--- a/rel/overlay/etc/local.ini
+++ b/rel/overlay/etc/local.ini
@@ -7,6 +7,7 @@
 [couchdb]
 ;max_document_size = 4294967296 ; bytes
 ;os_process_timeout = 5000
+uuid = e185a9b2ee2ee30a993ae29346305e22
 
 [couch_peruser]
 ; If enabled, couch_peruser ensures that a private per-user database
